[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/chakra_petch.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UI/Device/Device.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0, 0, 0, 0.658824 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.635294, 0.368627, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=12]
size = 28
outline_size = 1
outline_color = Color( 1, 0.635294, 0.368627, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
draw_center = false

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.345098, 0.592157, 0.803922, 1 )

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 1 )

[node name="Device" type="Panel"]
margin_right = 1060.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = SubResource( 10 )
script = ExtResource( 2 )

[node name="Rows" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="DeviceName" type="Label" parent="Rows"]
margin_right = 1060.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0.635294, 0.368627, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Office Emotiscope"
align = 1

[node name="Divider" type="Panel" parent="Rows"]
margin_top = 61.0
margin_right = 1060.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 2 )
mouse_filter = 1
custom_styles/panel = SubResource( 14 )

[node name="Columns" type="HBoxContainer" parent="Rows"]
margin_top = 67.0
margin_right = 1060.0
margin_bottom = 94.0

[node name="IPAddress" type="Label" parent="Rows/Columns"]
margin_right = 350.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.345098, 0.592157, 0.803922, 1 )
custom_fonts/font = SubResource( 15 )
text = "192.168.0.123"
align = 1

[node name="FirmwareVersion" type="Label" parent="Rows/Columns"]
margin_left = 354.0
margin_right = 705.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.345098, 0.592157, 0.803922, 1 )
custom_fonts/font = SubResource( 15 )
text = "2.0.0"
align = 1

[node name="LastCheckIn" type="Label" parent="Rows/Columns"]
margin_left = 709.0
margin_right = 1060.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.345098, 0.592157, 0.803922, 1 )
custom_fonts/font = SubResource( 15 )
text = "5 min ago"
align = 1

[connection signal="gui_input" from="." to="." method="_on_Device_gui_input"]
